# slack-search

./: .gitignore  CLAUDE.md  Makefile  README.md  app.py  com.user.slack-refresh.plist  go.mod  pyproject.toml
.claude/commands/: analyze-chat.md
.github/workflows/: ci.yml
cmd/slack-search/: main.go
doc/: slack-search-skill.md
docs/: go-feature-catalog.md  mcp-server-design.md  mcp-setup.md  report.md  slack-search-skill.md  tasks.md
docs/presentation-2026-06-21/: data-flow.mmd  presentation.html  presentation.md
docs/slack-search-2026-06-26/: presentation.html  presentation.md
go/: .gitignore  CLAUDE.md  go-embedded-ui-pattern.md  go.mod  go.sum
go/completions/: _slack-search
go/prompts/: nl_to_sql.md
go/ui/: package-lock.json  package.json  vite.config.ts
internal/api/: routes.go
internal/config/: config.go
internal/db/: conversations.go  database.go
internal/download/: download.go
internal/eval/: eval.go
internal/format/: format.go
internal/mcpserver/: server.go
internal/nlq/: query.go
internal/search/: search.go
internal/slack/: client.go  livesearch.go
prompts/: eval_judge.md  nl_to_sql.md
python/: .env.example  .rht_models.json.example  README.md  pyproject.toml  test_nl_to_sql.py
python/prompts/: schema.sql  synthesis.md
python/scripts/: inject_schema.py
python/slack_search/: canvas.py  (+6 more)
slack_search/: ai_query.py  bookmarks.py  canvas.py  cli.py  conversations_db.py  database.py  downloader.py  eval.py  grep.py  search.py  slack_client.py  slack_format.py  slack_search_api.py
tests/: test_cases.yaml  test_grep.py
(+25 files in other folders)
